--- a/package.json
+++ b/package.json
@@ -9,8 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.9",
+    "formik": "^2.4.6",
+    "framer-motion": "^12.0.6",
+    "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.6"
+    "react-phone-input-2": "^2.15.1",
+    "react-select": "^5.10.0",
+    "sass": "^1.83.4",
+    "swiper": "^11.2.1",
+    "yup": "^1.6.1",
+    "zustand": "^5.0.3"
   }
 }
