--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "axios": "^1.7.9",
     "formik": "^2.4.6",
     "framer-motion": "^12.0.6",
+    "fs": "^0.0.1-security",
+    "gray-matter": "^4.0.3",
+    "marked": "^15.0.6",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
