--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^12.0.6",
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
+    "lenis": "^1.1.20",
     "marked": "^15.0.6",
     "next": "15.1.6",
     "react": "^19.0.0",
