--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "formik": "^2.4.6",
     "framer-motion": "^12.0.6",
     "fs": "^0.0.1-security",
+    "googleapis": "^144.0.0",
     "gray-matter": "^4.0.3",
     "lenis": "^1.1.20",
     "marked": "^15.0.6",
+    "mdx-bundler": "^10.0.3",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
